--- a/lotus/templates/admin/lotus/category/tree.html
+++ b/lotus/templates/admin/lotus/category/tree.html
@@ -44,7 +44,7 @@
 
                 TODO:
                 * Move the bullet icon as a real DOM element since pseudo element before can not
-                clickable and we need to keep click event on summary content (because of detail
+                be clickable and we need to keep click event on summary content (because of detail
                 link)
                 * Implement common accordion interactivity in vanilla javascript
                 {% endcomment %}
